watched content updated